--- a/apps/web/src/styles/components/Header.module.scss
+++ b/apps/web/src/styles/components/Header.module.scss
@@ -45,7 +45,6 @@
 
   .project {
     font-size: 1.2em;
-    margin-left: 8px;
   }
 
   form.project {
@@ -66,6 +65,10 @@
 
   span.project {
     cursor: pointer;
-    // font-size: 1.2em;
+    padding: 0.5rem 0.5rem;
+
+    &:hover {
+      background-color: var(--primary-dark-color);
+    }
   }
 }
